# MoMo

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml  sleepmomo.yml  wakeupmomo.yml
1_assembly_instructions/: index.html
2_software_setup/: index.html
3_startup_procedure/: index.html
4_troubleshooting/: index.html
5_top_modules/: index.html
6_simulation/: index.html
7_api_reference/: index.html
CAD/: Aluminium_angle_bracket.SLDPRT  Aluminium_profile_160.SLDPRT  Aluminium_profile_30.SLDPRT  Aluminium_profile_354.SLDPRT  Aluminium_profile_380.SLDPRT  Aluminium_profile_42_8.SLDPRT  Aluminium_profile_436.SLDPRT  Aluminium_profile_60.SLDPRT  Aluminium_profile_620.SLDPRT  Aluminium_profile_664.SLDPRT  Aluminium_profile_690.SLDPRT  Aluminium_profile_89.SLDPRT  Aluminium_profile_90.SLDPRT  Centering_Cone.SLDPRT  Joint_30x30.SLDPRT  Mount_Harting_Connector.SLDPRT  Spacer.SLDPRT  angle_5_20.SLDPRT  back_cover.SLDPRT  back_wheel_cover.SLDPRT  base_link.SLDPRT  base_plate_localization_module.SLDPRT  center_cover.SLDPRT  connector.SLDPRT  connector_bracket.SLDPRT  cover_top_plate.SLDPRT  dummy_screen.SLDPRT  (+23 more)
momo_control/: CMakeLists.txt  mecanum_drive_controller_plugins.xml  package.xml
momo_control/config/: control.yaml  diff_drive.yaml  teleop_logitech.yaml
momo_control/include/mecanum_drive_controller/: joint_command_interface.h  mecanum_drive_controller.h  odometry.h  speed_limiter.h
momo_control/launch/: control.launch  teleop.launch
momo_control/src/: mecanum_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
(+125 files in other folders)
