<?xml version="1.0"?>
<package format="2">
  <name>momo_control</name>
  <version>0.3.4</version>
  <description>Controller for momo2</description>
  <maintainer email="markus.knitt@tuhh.de">Markus Knitt</maintainer>

  <license>BSD</license>

  <author email="yousefelgohary3112@gmail.com">Yousef Elgouhary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>hardware_interface</depend>

  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  
  <test_depend>controller_manager</test_depend>
  <test_depend>roslaunch</test_depend>

  <export>
    <controller_interface plugin="${prefix}/mecanum_drive_controller_plugins.xml"/>
  </export>
</package>
